--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,7 +10,7 @@ title:               foo
 #tagline:             'foo's website
 description:         Foo's blog...
 #url: https://dyndna.github.io/lanyon-plus
-url: https://bakhyeonjae.github.io/Athena/
+url: https://bakhyeonjae.github.io/Athena
 #baseurl: "/lanyon-plus"
 urlimg: https://dyndna.github.io/lanyon-plus/images/
 markdown: kramdown
