To find proper link on sidebar.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -97,6 +97,6 @@ disqus_shortname: foo
 #google_analytics:   xyz123abc
 
 #### For dummy website only - remove if you wish ####
-github_repo: https://github.com/dyndna/lanyon-plus
-version: 1.1.0
+#github_repo: https://github.com/dyndna/lanyon-plus
+#version: 1.1.0
 ## END ##
